<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_corners_background"
    android:orientation="vertical"
    android:padding="@dimen/card_padding_medium">

    <ImageView
        android:layout_width="@dimen/image_size_large"
        android:layout_height="@dimen/image_size_large"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/no_active_trip_image_description"
        android:src="@drawable/ic_upcoming_trip"
        app:tint="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_upcoming_trips_title"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/text_size_medium" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_upcoming_trips_description"
        android:textColor="@color/secondary_text_color"
        android:textSize="@dimen/text_size_small" />

</androidx.appcompat.widget.LinearLayoutCompat>