<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_corners_background"
    android:orientation="vertical"
    android:padding="@dimen/card_padding_medium">

    <ImageView
        android:id="@+id/trips_error_view_image"
        android:layout_width="@dimen/image_size_large"
        android:layout_height="@dimen/image_size_large"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/no_active_trip_image_description"
        app:tint="@color/white"
        tools:src="@drawable/ic_active_trip" />

    <TextView
        android:id="@+id/trips_error_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/text_size_medium"
        tools:text="@string/no_active_trips_title" />

    <TextView
        android:id="@+id/trips_error_view_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/secondary_text_color"
        android:textSize="@dimen/text_size_small"
        tools:text="@string/no_active_trips_description" />

</androidx.appcompat.widget.LinearLayoutCompat>