<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/list_item_margin_small"
    android:background="@drawable/round_corners_background"
    android:paddingStart="@dimen/item_horizontal_medium_padding"
    android:paddingTop="@dimen/item_vertical_medium_padding"
    android:paddingEnd="@dimen/item_horizontal_medium_padding"
    android:paddingBottom="@dimen/item_vertical_medium_padding">

    <TextView
        android:id="@+id/trip_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proxima_nova_bold"
        android:hint="@string/trip_item_title_hint"
        android:textColor="@color/primary_text_color"
        android:textColorHint="@color/primary_text_color"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/trip_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/drawable_padding_small"
        android:fontFamily="@font/proxima_nova_alt_regular"
        android:gravity="center"
        android:hint="@string/trip_item_period_hint"
        android:textColor="@color/primary_text_color"
        android:textColorHint="@color/primary_text_color"
        android:textSize="@dimen/text_size_small"
        app:drawableStartCompat="@drawable/ic_calendar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trip_item_title" />

    <ImageView
        android:layout_width="@dimen/ic_caret_size"
        android:layout_height="@dimen/ic_caret_size"
        android:contentDescription="@string/preview_item_icon_description"
        android:src="@drawable/ic_caret_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>