<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/grade_cursive"
        android:text="@string/home_screen_title"
        android:textColor="@color/secondary_text_color"
        android:textSize="@dimen/home_screen_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/home_screen_animation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/home_screen_animation"
        android:layout_marginTop="-100dp"/>

    <TextView
        android:id="@+id/welcome_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="220dp"
        android:fontFamily="@font/proxima_nova_alt_regular"
        android:text="@string/welcome_message_start_screen"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/home_screen_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle_for_search_screen_search"
        app:layout_constraintTop_toBottomOf="@+id/welcome_textview"
        tools:layout_editor_absoluteX="14dp">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/plan_trip_animation"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/plan_trip_animation"
            app:lottie_repeatMode="reverse" />

        <TextView
            android:id="@+id/search_text_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/plan_trip_animation"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/proxima_nova_alt_light"
            android:paddingHorizontal="18dp"
            android:text="@string/search_text_question"
            android:textAlignment="center"
            android:textColor="@color/secondary_text_color"
            android:textSize="@dimen/home_screen_search_qustion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plan_trip_animation" />

        <EditText
            android:id="@+id/search_input_edittext"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_for_edittext_screen_search"
            android:ems="10"
            android:fontFamily="@font/proxima_nova_alt_light"
            android:hint="@string/search_edittext_text"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/secondary_text_color"
            android:textColorHint="@color/secondary_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_text_question" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/search_button_trip"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:background="@drawable/rectangle_for_button_screen_search"
        android:fontFamily="@font/proxima_nova_alt_light"
        android:text="@string/search_button_text"
        android:textColor="@color/secondary_text_color"
        android:textSize="@dimen/home_screen_search_qustion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>